src/objects/Tour__c.object
<CustomObject>
    <description>A collection of Events and Ad Plans that are linked together with additional tour-level processes and activities</description>
    <fields>
        <fullName>AggregatedTour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregated Tour?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuyingGroup__c</fullName>
        <label>Buying Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BuyingGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosingLinkTitle__c</fullName>
        <defaultValue>&quot;[=ArtistName] at [=VenueName]&quot;</defaultValue>
        <label>Closing Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosingPostBody__c</fullName>
        <defaultValue>&quot;Tickets onsale now for [=ArtistName]&apos;s show in [=VenueCity] on [=ShowDate]! Click below &amp; get yours!&quot;</defaultValue>
        <label>Closing Post Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CrossCollateralization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross-Collateralization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyDate__c</fullName>
        <label>Currency Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrencyExchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Exchange</label>
        <referenceTo>CurrencyExchange__c</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DigitalSpendPercent__c</fullName>
        <formula>DigitalSpend__c/ LNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Spend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DigitalSpend__c</fullName>
        <label>Digital Spend</label>
        <summarizedField>TourCampaign__c.NetAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaign__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digital</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TourCampaign__c.NonLNETourBudgetBlank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaign__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Office</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Division</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FilterArtist__c</fullName>
        <description>The Tour daily auto association process will include this Artist&apos;s name in its search of Events to associate.</description>
        <label>Filter Artist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterDivision__c</fullName>
        <description>The Tour daily auto association process will include this Division&apos;s name in its search of Events to associate.</description>
        <label>Filter Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilterEndDate__c</fullName>
        <description>The Tour daily auto association process will include this date as the latest show date in its search of Events to associate.</description>
        <label>Filter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FilterExpirationDate__c</fullName>
        <description>Until the date in this field, the Tour daily auto association process will include this record&apos;s filter criteria in its search of Events to associate.</description>
        <label>Filter Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FilterStartDate__c</fullName>
        <description>The Tour daily auto association process will include this date as the earliest show date in its search of Events to associate.</description>
        <label>Filter Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FilterVenueType__c</fullName>
        <description>The Tour daily auto association process will include only this venue type in its search of Events to associate.</description>
        <label>Filter Venue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEMarketingBudget__c</fullName>
        <label>LNE Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNESpend__c</fullName>
        <label>LNE Spend</label>
        <summarizedField>TourCampaign__c.NetAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaign__c.NonLNETourBudgetBlank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaign__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MiscSpendPercent__c</fullName>
        <formula>MiscSpend__c/LNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Misc Spend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MiscSpend__c</fullName>
        <label>Misc Spend</label>
        <summarizedField>TourCampaign__c.NetAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaign__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Misc</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TourCampaign__c.NonLNETourBudgetBlank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaign__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NonLNEBudget__c</fullName>
        <label>Non-LNE Budget</label>
        <summarizedField>NonLNETourBudget__c.Budget__c</summarizedField>
        <summaryForeignKey>NonLNETourBudget__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NonLNESpend__c</fullName>
        <label>Non-LNE Spend</label>
        <summarizedField>TourCampaign__c.NetAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaign__c.NonLNETourBudgetBlank__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaign__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnSaleLinkTitle__c</fullName>
        <defaultValue>&quot;[=ArtistName] at [=VenueName]&quot;</defaultValue>
        <label>OnSale Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnSalePostBody__c</fullName>
        <defaultValue>&quot;Tickets onsale now for [=ArtistName]&apos;s show in [=VenueCity] on [=ShowDate]! Click below &amp; get yours!&quot;</defaultValue>
        <label>OnSale Post Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleProjectCode__c</fullName>
        <label>Oracle Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSaleCode__c</fullName>
        <label>PreSale Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSaleLinkTitle__c</fullName>
        <defaultValue>&quot;[=ArtistName] at [=VenueName]&quot;</defaultValue>
        <label>PreSale Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreSalePostBody__c</fullName>
        <defaultValue>&quot;PRESALE for [=ArtistName]’s show at the [=VenueName] in [=VenueCity] on [=ShowDate] has begun! Use code &apos;[=Code]&apos;  &amp; click below to get yours!&quot;</defaultValue>
        <label>PreSale Post Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductionSpendPercent__c</fullName>
        <formula>ProductionSpend__c/LNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Spend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductionSpend__c</fullName>
        <label>Production Spend</label>
        <summarizedField>TourCampaign__c.NetAmount__c</summarizedField>
        <summaryFilterItems>
            <field>TourCampaign__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Production</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>TourCampaign__c.NonLNETourBudgetBlank__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TourCampaign__c.Tour__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReTargetingLinkTitle__c</fullName>
        <defaultValue>&quot;See [=ArtistName] on [=ShowDate]&quot;</defaultValue>
        <label>ReTargeting Link Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReTargetingPostBody__c</fullName>
        <defaultValue>&quot;Your [=ArtistName] tickets are waiting…Don’t miss the tour at [=VenueName].&quot;</defaultValue>
        <label>ReTargeting Post Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RemainingLNEBudget__c</fullName>
        <formula>LNEMarketingBudget__c -  LNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining LNE Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemainingNonLNEBudget__c</fullName>
        <formula>NonLNEBudget__c -  NonLNESpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Non-LNE Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestID__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_Currency_Recalc__c</fullName>
        <formula>IF 
( 
ISNULL(CurrencyExchange__c), 
TRUE, 
IF 
( 
ISNULL(CurrencyDate__c), 
IF 
( 
CurrencyExchange__r.IsCurrent__c = FALSE, 
TRUE, 
FALSE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = FALSE) , 
IF 
( 
AND(CurrencyExchange__r.StartDate__c &lt;= CurrencyDate__c, CurrencyExchange__r.EndDate__c &gt;= CurrencyDate__c), 
FALSE, 
TRUE 
) , 
IF 
( 
AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = TRUE), 
IF 
( 
(CurrencyExchange__r.StartDate__c &gt; CurrencyDate__c) = TRUE, 
TRUE, 
FALSE 
) , 
TRUE 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled for Currency Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Artist Passed</fullName>
                </value>
                <value>
                    <fullName>LNE Passed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalEndofTourDinner__c</fullName>
        <label>Total End of Tour Dinner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMiscExpense__c</fullName>
        <label>Total Misc Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPerDiems__c</fullName>
        <label>Total Per Diems</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTE__c</fullName>
        <label>Total T&amp;E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTSO__c</fullName>
        <formula>TotalTE__c + TotalEndofTourDinner__c + TotalTourRep__c + TotalMiscExpense__c + TotalPerDiems__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total TSO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTourRep__c</fullName>
        <label>Total Tour Rep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourBooker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Booker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TourCoHeadliner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Co-Headliner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Artist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tours (Tour Co-Headliner)</relationshipLabel>
        <relationshipName>Tours2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TourHeadliner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Headliner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Artist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tours (Tour Headliner)</relationshipLabel>
        <relationshipName>Tours1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TourMarketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tours1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TourMarketingBudget__c</fullName>
        <defaultValue>0.4</defaultValue>
        <label>Tour Marketing Budget %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TourName__c</fullName>
        <label>Tour Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TourTitle__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; TourName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxDigitalSpend__c</fullName>
        <formula>(DigitalSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Digital Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNEMarketingBudget__c</fullName>
        <formula>(LNEMarketingBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Marketing Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLNESpend__c</fullName>
        <formula>(LNESpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>LNE Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxMiscSpend__c</fullName>
        <formula>(MiscSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Misc Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNonLNEBudget__c</fullName>
        <formula>(NonLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Non-LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNonLNESpend__c</fullName>
        <formula>(NonLNESpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Non-LNE Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProductionSpend__c</fullName>
        <formula>(ProductionSpend__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Production Spend (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRemainingLNEBudget__c</fullName>
        <formula>(RemainingLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Remaining LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxRemainingNonLNEBudget__c</fullName>
        <formula>(RemainingNonLNEBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Remaining Non-LNE Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalEndofTourDinner__c</fullName>
        <formula>(TotalEndofTourDinner__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total End of Tour Dinner (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalMiscExpense__c</fullName>
        <formula>(TotalMiscExpense__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Misc Expense (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalPerDiems__c</fullName>
        <formula>(TotalPerDiems__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Per Diems (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalTE__c</fullName>
        <formula>(TotalTE__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total T&amp;E (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalTSO__c</fullName>
        <formula>(TotalTSO__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total TSO (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalTourRep__c</fullName>
        <formula>(TotalTourRep__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Tour Rep (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tour</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TourName__c</columns>
        <columns>TourHeadliner__c</columns>
        <columns>TourCoHeadliner__c</columns>
        <columns>BuyingGroup__c</columns>
        <columns>Division__c</columns>
        <columns>TourBooker__c</columns>
        <columns>TourMarketer__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tou-{000000}</displayFormat>
        <label>Tour ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>